# osmosis-std-derive

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs
tests/: query.rs  struct.rs
