[package]
description = "Procedural macro for osmosis-std"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "coreum-std-derive"
version = "0.20.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[lib]
proc-macro = true

[dependencies]
itertools = "0.10.3"
proc-macro2 = "1.0.40"
prost = "0.12.6"
quote = "1.0.20"
syn = "1.0.98"

[dev-dependencies]
cosmwasm-std = { version = "2.1.4", features = ["cosmwasm_2_0"] }
prost = { version = "0.12.6", default-features = false, features = [
    "prost-derive",
] }
prost-types = { version = "0.12.6", default-features = false }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
trybuild = { version = "1.0.63", features = ["diff"] }
